@@ -65,4 +65,6 @@ interface MRConstants {
    * Temporary directory name 
    */
   public static final String TEMP_DIR_NAME = "_temporary";
+  
+  public static final String WORKDIR = "work";
 }
